# brender-studio-app

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
environment/: apt_packages.txt
public/: splashscreen.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: 2bmp.bat
src-tauri/icons/logos/: logo-brender-studio.icns
src-tauri/resources/deploy/: buildspec-ses-refactor.yml  buildspec-test-g6.yml  buildspec-test-python-path.yml  buildspec.yml
src-tauri/resources/example-scripts/: boto3_ops_example.py  custom_env_example.py  enable_gpu_rendering.py  env_engine_rendering.py  multicamera_rendering.py  multiscene_rendering.py  render_frame.py  render_range_by_index.py
src-tauri/resources/scripts/: get_data_scene.py
src-tauri/resources/ses-templates/: render_completed.json  render_failed.json
src-tauri/src/: main.rs
src/hooks/: useEnvironmentVars.tsx  useFiledropHover.tsx  useFormRender.tsx  useOnlineStatus.tsx  usePlatform.tsx  useSession.tsx  useUpdater.ts
src/lib/: SidebarRoutes.tsx  awsRegionsByContinent.ts  formatSize.ts
src/pages/: BuildsPage.tsx  CostExplorerPage.tsx  DeployStackPage.tsx  EfsPage.tsx  EmailNotificationsPage.tsx  HomePage.tsx  InstancesPage.tsx  JobsPage.tsx  RenderCpuPage.tsx  RenderGpuPage.tsx  RendersPage.tsx  RepositoryPage.tsx  ServiceQuotaPage.tsx  SettingsPage.tsx  StackDetailPage.tsx  StacksPage.tsx  (+1 more)
(+461 files in other folders)
